--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "next-qrcode": "^2.5.1",
     "pako": "^2.1.0",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-email": "3.0.2",
     "react-qr-barcode-scanner": "^2.0.0",
+    "react-qr-code": "^2.0.15",
     "resend": "^4.0.1",
     "use-barcode-detection": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
