--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.0.3",
     "next-qr-reader": "^1.0.1",
     "next-qrcode": "^2.5.1",
+    "node-fetch": "^3.3.2",
     "pako": "^2.1.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
