--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "email": "email dev"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@react-email/components": "0.0.28",
     "@react-email/img": "0.0.10",
     "@thewirv/react-barcode-scanner": "^3.3.5",
@@ -39,7 +41,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5"
   }
 }
