--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-qr-barcode-scanner": "^2.0.0",
     "react-qr-code": "^2.0.15",
     "resend": "^4.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "use-barcode-detection": "^1.0.2"
   },
   "devDependencies": {
